# ternix

./: Cargo.toml
logic/layer/: Cargo.toml
logic/layer/src/: lib.rs
logic/orientation/: Cargo.toml
logic/orientation/src/: axis.rs  direction.rs  lib.rs  orientation.rs  polarity.rs  rotation.rs
logic/piece/: Cargo.toml
logic/piece/src/: lib.rs
logic/queue/: Cargo.toml
logic/queue/src/: lib.rs  parsing.rs  pattern.rs
logic/shapes/: Cargo.toml
logic/shapes/src/: bitfield.rs  bounding_box.rs  lib.rs  shape.rs  shape_id.rs
logic/tetrominos/: Cargo.toml
logic/tetrominos/src/: lib.rs
src/: action.rs  brute_forcing.rs  heuristic.rs  lib.rs
