[package]
name = "ternix"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "logic/layer",
    "logic/orientation",
    "logic/piece",
    "logic/queue",
    "logic/shapes",
    "logic/tetrominos",
]

[dependencies]
queue = { path = "logic/queue" }
tetrominos = { path = "logic/tetrominos" }
piece = { path = "logic/piece" }
layer = { path = "logic/layer" }
orientation = { path = "logic/orientation" }
shapes = { path = "logic/shapes" }
colored = "3.0.0"
strum = "0.26.3"
strum_macros = "0.26.4"
